applicationset/billing/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: billing
  name: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  strategy: {}
  template:
    metadata:
      labels:
        app: billing
    spec:
      serviceAccountName: billing
      containers:
      - image: argoproj/rollouts-demo:blue
        name: httpd-24-micro
