applicationset/billing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: billing
  name: billing
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: billing
